# EveryLauncherMonitor

debian/: changelog  control  everylauncher-monitor-dkms.dkms.in  everylauncher-monitor-server.install  everylauncher-monitor-server.postinst  everylauncher-monitor-server.service  rules
dirvers/: .cache.mk  .ftrace_hook.o.d  Makefile  compile_commands.json  everylauncher_monitor.c  ftrace_hook.c  vfs_change.c  vfs_change.h  vfs_change_consts.h  vfs_change_uapi.h
server/: CMakeLists.txt  ServerAdaptor.cpp  ServerAdaptor.h  ServerInterface.cpp  ServerInterface.h  com.gitee.wanywhn.EveryLauncherMonitor.service  com.gitee.wanywhn.EveryLauncherMonitor.xml  com.gitee.wanywhn.everylauncherMonitor.xml  com.gitee.wanywhn.everylaunchermonitor.xml  everylauncher-monitor.pro  everylauncher-monitor.service  everylauncher_interface.cpp  everylauncher_interface.h  everylaunchermonitor_adaptor.cpp  everylaunchermonitor_adaptor.h  everylaunchermonitor_interface.cpp  everylaunchermonitor_interface.h  main.cpp  postinst  server.cpp  server.h  src.pro
server/systemd.sysusers.d/: everylauncher-monitor.conf
